src/core-crm/objects/Answer__c/Answer__c.object-meta.xml
<CustomObject>
    <description>This will store the answers to each questions presented in a questionnaire.</description>
    <label>Answer</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>