src/core-crm/objects/Answer__c/fields/Questionnaire_Response_Summary__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Response_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the answer to the Questionnaire Response Summary.</description>
    <label>Questionnaire Response Summary</label>
    <referenceTo>Questionnaire_Response_Summary__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>