src/core-crm/objects/Answer__c/fields/Related_Answer__c.field-meta.xml
<CustomField>
    <fullName>Related_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related answer that link Questionnaire and Question records.</description>
    <label>Related Answer</label>
    <referenceTo>Related_Answer__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>