src/core-crm/objects/Answer__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Capture the response to each question.</description>
    <label>Response</label>
    <type>TextArea</type>
</CustomField>