src/core-crm/objects/Answer__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>This will drive the sorting of the questions.</description>
    <label>Sequence</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>